--- a/Fleet Command/Fleet Command.csproj
+++ b/Fleet Command/Fleet Command.csproj
@@ -66,6 +66,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="alliancecorp.cs" />
+    <Compile Include="regfleet.cs" />
     <Compile Include="SingleInstance.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -110,6 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="alliances.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
